// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshots should render additional classes 1`] = `
<div>
  <div
    class="card card--default card--column card--padding-block-xl card--padding-inline-xl card--shadow-sm other-class"
  >
    <div
      class="card__header other-header-class"
    >
      Header
    </div>
    <div
      class="card__body other-body-class"
    >
      Body
    </div>
    <div
      class="card__footer other-footer-class"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should render direction classes 1`] = `
<div>
  <div
    class="card card--default card--row card--padding-block-xl card--padding-inline-xl card--shadow-sm"
  >
    <div
      class="card__header"
    >
      Header
    </div>
    <div
      class="card__body"
    >
      Body
    </div>
    <div
      class="card__footer"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should render media 1`] = `
<div>
  <div
    class="card card--default card--row card--padding-block-xl card--padding-inline-xl card--shadow-sm"
  >
    <div
      class="card__media"
    >
      <img
        class="card__media__img"
        src=""
      />
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should render padding classes 1`] = `
<div>
  <div
    class="card card--default card--column card--padding-block-md card--padding-inline-xl card--shadow-sm"
  >
    <div
      class="card__header"
    >
      Header
    </div>
    <div
      class="card__body"
    >
      Body
    </div>
    <div
      class="card__footer"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should render shadow classes 1`] = `
<div>
  <div
    class="card card--default card--column card--padding-block-xl card--padding-inline-xl card--shadow-3xl"
  >
    <div
      class="card__header"
    >
      Header
    </div>
    <div
      class="card__body"
    >
      Body
    </div>
    <div
      class="card__footer"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should render skin classes 1`] = `
<div>
  <div
    class="card card--primary-faded card--column card--padding-block-xl card--padding-inline-xl card--shadow-sm"
  >
    <div
      class="card__header"
    >
      Header
    </div>
    <div
      class="card__body"
    >
      Body
    </div>
    <div
      class="card__footer"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should renders default component 1`] = `
<div>
  <div
    class="card card--default card--column card--padding-block-xl card--padding-inline-xl card--shadow-sm"
  >
    <div
      class="card__header"
    >
      Header
    </div>
    <div
      class="card__body"
    >
      Body
    </div>
    <div
      class="card__footer"
    >
      Footer
    </div>
  </div>
</div>
`;
